--- a/7S.ipynb
+++ b/7S.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNlwh83lMjwf/HLdcmGT4gu",
+      "authorship_tag": "ABX9TyPJ5jLkNi84fDFRXtyk1ztA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# ============================== ONE-CELL 7S + OLLAMA (COLAB) ==============================\n",
-        "# Installs Ollama, pulls up to 3 models, runs selected 7S prompts across models,\n",
+        "# ============================== ONE-CELL 7S + OLLAMA (COLAB, WRC EDITION) ==============================\n",
+        "# Installs Ollama, pulls up to 3 models, runs selected 7S prompts across models (WRC wording),\n",
         "# consolidates results, and saves JSON/Markdown outputs in /content.\n",
         "\n",
         "import os, subprocess, shlex, time, requests, json, re, textwrap, datetime\n",
@@ -197,7 +197,7 @@
         "        raise SystemExit(\"❌ Neither /api/chat nor /api/generate responded OK.\")\n",
         "\n",
         "# ---------------------------\n",
-        "# 3) PROMPT TEMPLATES (from doc)\n",
+        "# 3) PROMPT TEMPLATES (WRC wording)\n",
         "# ---------------------------\n",
         "def fill(s: str, kv: Dict[str,str]) -> str:\n",
         "    # simple replacement of [FIELD] with kv.get(field_lower)\n",
@@ -207,7 +207,7 @@
         "    return re.sub(r\"\\[([^\\]]+)\\]\", rep, s)\n",
         "\n",
         "PROMPTS = {\n",
-        "\"PROMPT_1_FULL_7S\": \"\"\"Act as a McKinsey consultant conducting a comprehensive 7S analysis.\n",
+        "\"PROMPT_1_FULL_7S\": \"\"\"Act as a WRC (World Renowned Consultancy) consultant conducting a comprehensive 7S analysis.\n",
         "INPUTS NEEDED:\n",
         "- Company/Organization name: [NAME]\n",
         "- Industry: [INDUSTRY]\n",
@@ -233,7 +233,7 @@
         "- Top 5 misalignments requiring attention\n",
         "- Recommendations prioritized by impact and feasibility\n",
         "\"\"\",\n",
-        "\"PROMPT_2_STRATEGY\": \"\"\"Evaluate the clarity and effectiveness of our organizational strategy using the McKinsey 7S model.\n",
+        "\"PROMPT_2_STRATEGY\": \"\"\"Evaluate the clarity and effectiveness of our organizational strategy using the 7S model.\n",
         "INPUTS NEEDED:\n",
         "- Current strategy statement: [PROVIDE]\n",
         "- Strategic goals (3-5 year): [LIST]\n",
@@ -403,7 +403,7 @@
         "- Workforce planning recommendations\n",
         "- HR metrics dashboard design\n",
         "\"\"\",\n",
-        "\"PROMPT_9_ALIGNMENT\": \"\"\"Evaluate how well all seven elements of the McKinsey 7S Framework align.\n",
+        "\"PROMPT_9_ALIGNMENT\": \"\"\"Evaluate how well all seven elements of the 7S Framework align.\n",
         "INPUTS NEEDED:\n",
         "- Brief assessment of each S element: [PROVIDE STATUS]\n",
         "- Recent organizational changes: [LIST]\n",
@@ -526,7 +526,7 @@
         "- Quick wins vs. long-term initiatives\n",
         "- Success metrics and milestones\n",
         "\"\"\",\n",
-        "\"PROMPT_14_INTEGRATION\": \"\"\"Combine McKinsey 7S insights with SWOT or PESTLE analysis.\n",
+        "\"PROMPT_14_INTEGRATION\": \"\"\"Combine 7S insights with SWOT or PESTLE analysis.\n",
         "INPUTS NEEDED:\n",
         "- 7S assessment summary: [PROVIDE]\n",
         "- SWOT analysis: [IF AVAILABLE]\n",
@@ -550,7 +550,7 @@
         "- Implementation feasibility scores\n",
         "- Integrated dashboard design\n",
         "\"\"\",\n",
-        "\"PROMPT_15_EXEC_SUMMARY\": \"\"\"Create an executive-level summary of McKinsey 7S analysis with actionable recommendations.\n",
+        "\"PROMPT_15_EXEC_SUMMARY\": \"\"\"Create an executive-level summary of 7S analysis with actionable recommendations.\n",
         "INPUTS NEEDED:\n",
         "- Full 7S analysis results: [PROVIDE KEY FINDINGS]\n",
         "- Strategic context and urgency: [DESCRIBE]\n",
@@ -575,7 +575,7 @@
         "- Key risks and mitigation strategies\n",
         "- Next steps and decision requirements\n",
         "\"\"\",\n",
-        "\"MEGA_PROMPT\": \"\"\"Act as a senior McKinsey consultant conducting a comprehensive 7S Framework analysis. I need a complete organizational assessment with actionable insights.\n",
+        "\"MEGA_PROMPT\": \"\"\"Act as a senior WRC consultant conducting a comprehensive 7S analysis. Provide a complete organizational assessment with actionable insights.\n",
         "[Use all context provided above and infer reasonable assumptions where N/A.]\n",
         "DELIVERABLES:\n",
         "- Executive Summary; Detailed Analysis by S; Integrated Findings; Strategic Recs; Implementation Plan; Appendices.\n",
@@ -642,7 +642,7 @@
         "        return ((r.json().get(\"message\") or {}).get(\"content\") or \"\").strip()\n",
         "\n",
         "def synthesize_consensus(primary_model: str, prompt_name: str, per_model: Dict[str,str]) -> str:\n",
-        "    sys = \"You are a senior consultant. Concisely synthesize multiple drafts into one coherent, non-redundant answer.\"\n",
+        "    sys = \"You are a senior WRC consultant. Concisely synthesize multiple drafts into one coherent, non-redundant answer.\"\n",
         "    user = f\"\"\"Prompt: {prompt_name}\n",
         "Combine the following {len(per_model)} model answers into one clear, structured response.\n",
         "- Keep the best points; remove repetition.\n",
@@ -745,7 +745,12 @@
             "  ✓ PROMPT_2_STRATEGY via phi3: 4401 chars\n",
             "  ✓ PROMPT_3_STRUCTURE via mistral: 4437 chars\n",
             "  ✓ PROMPT_3_STRUCTURE via llama3: 4324 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via phi3: 5608 chars\n"
+            "  ✓ PROMPT_3_STRUCTURE via phi3: 5608 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via mistral: 3176 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via llama3: 3418 chars\n",
+            "  ✓ PROMPT_4_SYSTEMS via phi3: 1666 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via mistral: 2934 chars\n",
+            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 4250 chars\n"
           ]
         }
       ]
