--- a/7S.ipynb
+++ b/7S.ipynb
@@ -750,7 +750,34 @@
             "  ✓ PROMPT_4_SYSTEMS via llama3: 3418 chars\n",
             "  ✓ PROMPT_4_SYSTEMS via phi3: 1666 chars\n",
             "  ✓ PROMPT_5_SHARED_VALUES via mistral: 2934 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 4250 chars\n"
+            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 4250 chars\n",
+            "  ✗ PROMPT_5_SHARED_VALUES via phi3: HTTPConnectionPool(host='127.0.0.1', port=11434): Read timed out. (read timeout=120)\n",
+            "  ✓ PROMPT_6_SKILLS via mistral: 3127 chars\n",
+            "  ✓ PROMPT_6_SKILLS via llama3: 3697 chars\n",
+            "  ✓ PROMPT_6_SKILLS via phi3: 10145 chars\n",
+            "  ✓ PROMPT_7_STYLE via mistral: 3285 chars\n",
+            "  ✓ PROMPT_7_STYLE via llama3: 3736 chars\n",
+            "  ✓ PROMPT_7_STYLE via phi3: 5929 chars\n",
+            "  ✓ PROMPT_8_STAFF via mistral: 3078 chars\n",
+            "  ✓ PROMPT_8_STAFF via llama3: 4511 chars\n",
+            "  ✓ PROMPT_8_STAFF via phi3: 3445 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via mistral: 5848 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via llama3: 3245 chars\n",
+            "  ✓ PROMPT_9_ALIGNMENT via phi3: 9080 chars\n",
+            "  ✓ PROMPT_10_CHANGE via mistral: 9159 chars\n",
+            "  ✓ PROMPT_10_CHANGE via llama3: 5100 chars\n",
+            "  ✓ PROMPT_10_CHANGE via phi3: 6424 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via mistral: 3899 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via llama3: 7039 chars\n",
+            "  ✓ PROMPT_11_DIGITAL via phi3: 4861 chars\n",
+            "  ✓ PROMPT_12_BENCH via mistral: 5567 chars\n",
+            "  ✓ PROMPT_12_BENCH via llama3: 2737 chars\n",
+            "  ✓ PROMPT_12_BENCH via phi3: 5888 chars\n",
+            "  ✓ PROMPT_13_GAPS via mistral: 4286 chars\n",
+            "  ✓ PROMPT_13_GAPS via llama3: 5661 chars\n",
+            "  ✓ PROMPT_13_GAPS via phi3: 9795 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via mistral: 3032 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via llama3: 4726 chars\n"
           ]
         }
       ]
