--- a/7S.ipynb
+++ b/7S.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPJ5jLkNi84fDFRXtyk1ztA",
+      "authorship_tag": "ABX9TyPQ4UzFSqeVhfZayNsAV4Z0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
         "]\n",
         "\n",
         "# Models to try pulling (we’ll use what actually succeeds)\n",
-        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"phi3\"]\n",
+        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"qwen3:235b\"]\n",
         "\n",
         "# Output paths\n",
         "OUT_DIR = \"/content\"\n",
@@ -720,7 +720,7 @@
         "id": "I2GPkTylQUJt",
         "outputId": "53491dcb-1a04-4220-faee-9baad2263dd5"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +777,18 @@
             "  ✓ PROMPT_13_GAPS via llama3: 5661 chars\n",
             "  ✓ PROMPT_13_GAPS via phi3: 9795 chars\n",
             "  ✓ PROMPT_14_INTEGRATION via mistral: 3032 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via llama3: 4726 chars\n"
+            "  ✓ PROMPT_14_INTEGRATION via llama3: 4726 chars\n",
+            "  ✓ PROMPT_14_INTEGRATION via phi3: 5511 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 4459 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via llama3: 4932 chars\n",
+            "  ✓ PROMPT_15_EXEC_SUMMARY via phi3: 9646 chars\n",
+            "  ✓ MEGA_PROMPT via mistral: 5275 chars\n",
+            "  ✓ MEGA_PROMPT via llama3: 5163 chars\n",
+            "  ✓ MEGA_PROMPT via phi3: 13421 chars\n",
+            "\n",
+            "✅ Done.\n",
+            "JSON: /content/7S_bundle.json\n",
+            "MD  : /content/7S_report.md\n"
           ]
         }
       ]
