--- a/7S.ipynb
+++ b/7S.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPQ4UzFSqeVhfZayNsAV4Z0",
+      "authorship_tag": "ABX9TyNcFe1cN4rK1zveTE+IP40D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,8 +99,8 @@
         "    \"MEGA_PROMPT\"\n",
         "]\n",
         "\n",
-        "# Models to try pulling (we’ll use what actually succeeds)\n",
-        "REQUESTED_MODELS = [\"mistral\", \"llama3\", \"qwen3:235b\"]\n",
+        "# Models to try pulling (we’ll use what actually succeeds), \"qwen3:8b\"\n",
+        "REQUESTED_MODELS = [\"gemma3\", \"mistral\", \"llama3\"]\n",
         "\n",
         "# Output paths\n",
         "OUT_DIR = \"/content\"\n",
@@ -153,27 +153,91 @@
         "# ---------------------------\n",
         "# 2) PULL MODELS (best-effort)\n",
         "# ---------------------------\n",
+        "# ---------------------------\n",
+        "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress)\n",
+        "# ---------------------------\n",
+        " # ---------------------------\n",
+        "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress)\n",
+        "# ---------------------------\n",
         "print(\"📥 Pulling models (best-effort):\", \", \".join(REQUESTED_MODELS))\n",
+        "\n",
+        "PULL_TIMEOUT_S = 900  # 15 minutes; big models can be chunky on Colab\n",
+        "\n",
+        "# Common alias fixes (Ollama doesn't have \"gemma3\")\n",
+        "MODEL_ALIASES = {\n",
+        "    \"gemma3\": \"gemma2:9b-instruct\",\n",
+        "    \"gemma2-9b\": \"gemma2:9b-instruct\",\n",
+        "    \"gemma2-2b\": \"gemma2:2b-instruct\",\n",
+        "    \"gemma7b\": \"gemma:7b-instruct\",\n",
+        "    \"llama3.1\": \"llama3.1\",  # pass-through example\n",
+        "}\n",
+        "\n",
+        "def _normalize_model_name(m: str) -> str:\n",
+        "    return MODEL_ALIASES.get(m.lower(), m)\n",
+        "\n",
+        "def _pull_with_timeout(model: str, timeout_s: int = PULL_TIMEOUT_S):\n",
+        "    print(f\"Pulling {model} …\")\n",
+        "    p = subprocess.Popen(\n",
+        "        [\"ollama\", \"pull\", model],\n",
+        "        stdout=subprocess.PIPE, stderr=subprocess.STDOUT, text=True\n",
+        "    )\n",
+        "    start = time.time()\n",
+        "    last_line = \"\"\n",
+        "    while True:\n",
+        "        if p.poll() is not None:\n",
+        "            break\n",
+        "        line = p.stdout.readline()\n",
+        "        if line:\n",
+        "            last_line = line.strip()\n",
+        "            low = line.lower()\n",
+        "            if any(k in low for k in (\"pulling\", \"downloading\", \"verifying\", \"extracting\", \"writing\", \"success\")):\n",
+        "                print(\"   \", last_line)\n",
+        "        if time.time() - start > timeout_s:\n",
+        "            try: p.kill()\n",
+        "            except Exception: pass\n",
+        "            raise TimeoutError(f\"timeout after {timeout_s}s (last: {last_line[:120]})\")\n",
+        "    # read any remaining buffered output\n",
+        "    try:\n",
+        "        tail = (p.stdout.read() or \"\")[-500:]\n",
+        "    except Exception:\n",
+        "        tail = \"\"\n",
+        "    return p.returncode or 0, tail\n",
+        "\n",
+        "# Normalize requested names up-front\n",
+        "REQUESTED_MODELS = [_normalize_model_name(m) for m in REQUESTED_MODELS]\n",
+        "\n",
         "available = []\n",
         "for m in REQUESTED_MODELS:\n",
         "    try:\n",
-        "        out = run([\"ollama\",\"pull\",m], check=False)\n",
+        "        code, tail = _pull_with_timeout(m)\n",
         "        # verify presence\n",
-        "        models = requests.get(TAGS, timeout=10).json().get(\"models\", [])\n",
-        "        roots  = {k.get(\"name\",\"\").split(\":\")[0] for k in models}\n",
-        "        if m in roots:\n",
-        "            available.append(m)\n",
-        "            print(f\"  ✅ {m} ready\")\n",
+        "        models = requests.get(TAGS, timeout=12).json().get(\"models\", [])\n",
+        "        names  = [k.get(\"name\", \"\") for k in models]\n",
+        "        roots  = {n.split(\":\")[0] for n in names}\n",
+        "        if (m in names) or (m.split(\":\")[0] in roots):\n",
+        "            chosen = m if m in names else m.split(\":\")[0]  # prefer exact tag\n",
+        "            available.append(chosen)\n",
+        "            print(f\"  ✅ Ready: {chosen}\")\n",
         "        else:\n",
-        "            print(f\"  ⚠️ {m} not listed after pull, skipping\")\n",
+        "            print(f\"  ⚠️ Not listed after pull: {m} (tail: {tail[-200:]})\")\n",
+        "    except TimeoutError as te:\n",
+        "        print(f\"  ⏱️ Timeout pulling {m}: {te}\")\n",
         "    except Exception as e:\n",
-        "        print(f\"  ⚠️ pull {m} failed: {e}\")\n",
+        "        print(f\"  ⚠️ Failed pulling {m}: {e}\")\n",
+        "\n",
+        "# Helpful hint if Gemma failed\n",
+        "if (not any(a.startswith((\"gemma2\",\"gemma\")) for a in available)\n",
+        "    and any(\"gemma\" in r.lower() for r in REQUESTED_MODELS)):\n",
+        "    print(\"💡 Tip: Try the smaller 'gemma2:2b-instruct' to avoid long downloads/RAM pressure in Colab.\")\n",
         "\n",
         "if not available:\n",
-        "    raise SystemExit(\"❌ No models available. Try a smaller one like 'mistral'.\")\n",
+        "    raise SystemExit(\"❌ No models available. Try a smaller model (e.g., 'mistral') or extend PULL_TIMEOUT_S.\")\n",
         "\n",
         "PRIMARY_MODEL = available[0]\n",
         "print(\"✅ Using models:\", \", \".join(available), f\"(primary: {PRIMARY_MODEL})\")\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Probe endpoints: prefer /api/chat, fallback to /api/generate\n",
         "USE_GENERATE = False\n",
@@ -645,6 +709,8 @@
         "    sys = \"You are a senior WRC consultant. Concisely synthesize multiple drafts into one coherent, non-redundant answer.\"\n",
         "    user = f\"\"\"Prompt: {prompt_name}\n",
         "Combine the following {len(per_model)} model answers into one clear, structured response.\n",
+        "Write it in a report format without mentioning that this is a synthesized response.\n",
+        "This will be going in front of Executives and VPs, so present it accordingly.\n",
         "- Keep the best points; remove repetition.\n",
         "- If answers conflict, state the trade-off and your recommendation.\n",
         "- Use short sections and bullets.\n",
@@ -718,9 +784,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2GPkTylQUJt",
-        "outputId": "53491dcb-1a04-4220-faee-9baad2263dd5"
+        "outputId": "141f83c0-f2b9-4041-8986-a16225063381"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,66 +795,7 @@
             "🔧 Installing Ollama…\n",
             "🚀 Starting ollama serve…\n",
             "⏳ Waiting for Ollama to become ready.\n",
-            "📥 Pulling models (best-effort): mistral, llama3, phi3\n",
-            "  ✅ mistral ready\n",
-            "  ✅ llama3 ready\n",
-            "  ✅ phi3 ready\n",
-            "✅ Using models: mistral, llama3, phi3 (primary: mistral)\n",
-            "ℹ️ Using /api/generate (chat failed).\n",
-            "\n",
-            "🧠 Running prompts: PROMPT_1_FULL_7S, PROMPT_2_STRATEGY, PROMPT_3_STRUCTURE, PROMPT_4_SYSTEMS, PROMPT_5_SHARED_VALUES, PROMPT_6_SKILLS, PROMPT_7_STYLE, PROMPT_8_STAFF, PROMPT_9_ALIGNMENT, PROMPT_10_CHANGE, PROMPT_11_DIGITAL, PROMPT_12_BENCH, PROMPT_13_GAPS, PROMPT_14_INTEGRATION, PROMPT_15_EXEC_SUMMARY, MEGA_PROMPT\n",
-            "  ✓ PROMPT_1_FULL_7S via mistral: 3982 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via llama3: 6251 chars\n",
-            "  ✓ PROMPT_1_FULL_7S via phi3: 8223 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via mistral: 4267 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via llama3: 4140 chars\n",
-            "  ✓ PROMPT_2_STRATEGY via phi3: 4401 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via mistral: 4437 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via llama3: 4324 chars\n",
-            "  ✓ PROMPT_3_STRUCTURE via phi3: 5608 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via mistral: 3176 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via llama3: 3418 chars\n",
-            "  ✓ PROMPT_4_SYSTEMS via phi3: 1666 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via mistral: 2934 chars\n",
-            "  ✓ PROMPT_5_SHARED_VALUES via llama3: 4250 chars\n",
-            "  ✗ PROMPT_5_SHARED_VALUES via phi3: HTTPConnectionPool(host='127.0.0.1', port=11434): Read timed out. (read timeout=120)\n",
-            "  ✓ PROMPT_6_SKILLS via mistral: 3127 chars\n",
-            "  ✓ PROMPT_6_SKILLS via llama3: 3697 chars\n",
-            "  ✓ PROMPT_6_SKILLS via phi3: 10145 chars\n",
-            "  ✓ PROMPT_7_STYLE via mistral: 3285 chars\n",
-            "  ✓ PROMPT_7_STYLE via llama3: 3736 chars\n",
-            "  ✓ PROMPT_7_STYLE via phi3: 5929 chars\n",
-            "  ✓ PROMPT_8_STAFF via mistral: 3078 chars\n",
-            "  ✓ PROMPT_8_STAFF via llama3: 4511 chars\n",
-            "  ✓ PROMPT_8_STAFF via phi3: 3445 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via mistral: 5848 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via llama3: 3245 chars\n",
-            "  ✓ PROMPT_9_ALIGNMENT via phi3: 9080 chars\n",
-            "  ✓ PROMPT_10_CHANGE via mistral: 9159 chars\n",
-            "  ✓ PROMPT_10_CHANGE via llama3: 5100 chars\n",
-            "  ✓ PROMPT_10_CHANGE via phi3: 6424 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via mistral: 3899 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via llama3: 7039 chars\n",
-            "  ✓ PROMPT_11_DIGITAL via phi3: 4861 chars\n",
-            "  ✓ PROMPT_12_BENCH via mistral: 5567 chars\n",
-            "  ✓ PROMPT_12_BENCH via llama3: 2737 chars\n",
-            "  ✓ PROMPT_12_BENCH via phi3: 5888 chars\n",
-            "  ✓ PROMPT_13_GAPS via mistral: 4286 chars\n",
-            "  ✓ PROMPT_13_GAPS via llama3: 5661 chars\n",
-            "  ✓ PROMPT_13_GAPS via phi3: 9795 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via mistral: 3032 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via llama3: 4726 chars\n",
-            "  ✓ PROMPT_14_INTEGRATION via phi3: 5511 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via mistral: 4459 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via llama3: 4932 chars\n",
-            "  ✓ PROMPT_15_EXEC_SUMMARY via phi3: 9646 chars\n",
-            "  ✓ MEGA_PROMPT via mistral: 5275 chars\n",
-            "  ✓ MEGA_PROMPT via llama3: 5163 chars\n",
-            "  ✓ MEGA_PROMPT via phi3: 13421 chars\n",
-            "\n",
-            "✅ Done.\n",
-            "JSON: /content/7S_bundle.json\n",
-            "MD  : /content/7S_report.md\n"
+            "📥 Pulling models (best-effort): gemma3, mistral, llama3\n"
           ]
         }
       ]
