--- a/7s.ipynb
+++ b/7s.ipynb
@@ -33,25 +33,10 @@
         "!pip install -q pandas tqdm matplotlib reportlab python-pptx requests\n"
       ],
       "metadata": {
-        "id": "xlMSHEIBQIpe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0b4f9ee0-f086-45d0-85bf-aa73e437a3b8"
+        "id": "xlMSHEIBQIpe"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/2.0 MB\u001b[0m \u001b[31m37.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m36.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/472.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m472.8/472.8 kB\u001b[0m \u001b[31m29.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/175.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m15.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -114,7 +99,9 @@
         "]\n",
         "\n",
         "# Models to try pulling (we’ll use what actually succeeds), \"qwen3:8b\"\n",
-        "REQUESTED_MODELS = [\"qwen3\", \"mistral\", \"llama3\"]\n",
+        "# REQUESTED_MODELS = [\"qwen3\", \"mistral\", \"llama3\"]\n",
+        "REQUESTED_MODELS = [\"qwen3\", \"phi3\", \"llama3\"]\n",
+        "\n",
         "\n",
         "# Common alias fixes (Ollama doesn't have \"gemma3\")\n",
         "MODEL_ALIASES = {\n",
@@ -177,83 +164,111 @@
         "\n",
         "\n",
         "# ---------------------------\n",
-        "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress)\n",
+        "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress + LOGGING)\n",
+        "# ---------------------------\n",
+        "# ---------------------------\n",
+        "# 2) PULL MODELS (best-effort, alias-aware, with timeout + progress + LOGGING + EXPERIMENT FLAG)\n",
         "# ---------------------------\n",
         "print(\"📥 Pulling models (best-effort):\", \", \".join(REQUESTED_MODELS))\n",
         "\n",
-        "PULL_TIMEOUT_S = 900  # 15 minutes; big models can be chunky on Colab\n",
+        "# Enable experimental client mode for better Colab compatibility\n",
+        "os.environ[\"OLLAMA_EXPERIMENT\"] = \"client2\"\n",
+        "print(f\"⚙️ Using experimental client: OLLAMA_EXPERIMENT={os.environ['OLLAMA_EXPERIMENT']}\")\n",
         "\n",
+        "PULL_TIMEOUT_S = 900  # 15 minutes; big models can be chunky on Colab\n",
         "\n",
         "\n",
         "def _normalize_model_name(m: str) -> str:\n",
         "    return MODEL_ALIASES.get(m.lower(), m)\n",
         "\n",
-        "def _pull_with_timeout(model: str, timeout_s: int = PULL_TIMEOUT_S):\n",
-        "    print(f\"Pulling {model} …\")\n",
+        "\n",
+        "def _pull_with_logs(model: str, timeout_s: int = PULL_TIMEOUT_S):\n",
+        "    \"\"\"Pulls a model while streaming logs live and showing timing.\"\"\"\n",
+        "    print(f\"\\n⏳ Starting pull for {model} ...\")\n",
+        "    start = time.time()\n",
+        "\n",
+        "    env = os.environ.copy()\n",
+        "    env[\"OLLAMA_EXPERIMENT\"] = \"client2\"\n",
+        "\n",
         "    p = subprocess.Popen(\n",
         "        [\"ollama\", \"pull\", model],\n",
-        "        stdout=subprocess.PIPE, stderr=subprocess.STDOUT, text=True\n",
+        "        stdout=subprocess.PIPE,\n",
+        "        stderr=subprocess.STDOUT,\n",
+        "        text=True,\n",
+        "        bufsize=1,  # line-buffered\n",
+        "        universal_newlines=True,\n",
+        "        env=env\n",
         "    )\n",
-        "    start = time.time()\n",
-        "    last_line = \"\"\n",
-        "    while True:\n",
-        "        if p.poll() is not None:\n",
-        "            break\n",
-        "        line = p.stdout.readline()\n",
-        "        if line:\n",
-        "            last_line = line.strip()\n",
-        "            low = line.lower()\n",
-        "            if any(k in low for k in (\"pulling\", \"downloading\", \"verifying\", \"extracting\", \"writing\", \"success\")):\n",
-        "                print(\"   \", last_line)\n",
-        "        if time.time() - start > timeout_s:\n",
-        "            try: p.kill()\n",
-        "            except Exception: pass\n",
-        "            raise TimeoutError(f\"timeout after {timeout_s}s (last: {last_line[:120]})\")\n",
-        "    # read any remaining buffered output\n",
+        "\n",
+        "    last_output_time = time.time()\n",
+        "    log_lines = []\n",
+        "\n",
         "    try:\n",
-        "        tail = (p.stdout.read() or \"\")[-500:]\n",
-        "    except Exception:\n",
-        "        tail = \"\"\n",
-        "    return p.returncode or 0, tail\n",
+        "        for line in iter(p.stdout.readline, \"\"):\n",
+        "            if not line:\n",
+        "                if p.poll() is not None:\n",
+        "                    break\n",
+        "                time.sleep(0.2)\n",
+        "                continue\n",
+        "            log_lines.append(line.strip())\n",
+        "            print(\"   \", line.strip(), flush=True)\n",
+        "            last_output_time = time.time()\n",
+        "\n",
+        "            # Detect inactivity timeout\n",
+        "            if time.time() - last_output_time > 120:  # 2 min silence\n",
+        "                print(\"⚠️ No new output for 2 minutes... still waiting...\")\n",
+        "                last_output_time = time.time()\n",
+        "\n",
+        "            # Hard timeout\n",
+        "            if time.time() - start > timeout_s:\n",
+        "                print(f\"❌ Timeout after {timeout_s}s. Killing process.\")\n",
+        "                p.kill()\n",
+        "                break\n",
+        "\n",
+        "        rc = p.wait(timeout=10)\n",
+        "        elapsed = time.time() - start\n",
+        "        print(f\"✅ Finished pulling {model} in {elapsed:.1f} seconds (exit {rc})\")\n",
+        "        return rc, log_lines[-50:]  # return last 50 lines for diagnostics\n",
+        "\n",
+        "    except subprocess.TimeoutExpired:\n",
+        "        print(f\"❌ Pull timed out after {timeout_s}s, killing {model}\")\n",
+        "        p.kill()\n",
+        "        return 1, log_lines[-50:]\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error pulling {model}: {e}\")\n",
+        "        p.kill()\n",
+        "        return 1, log_lines[-50:]\n",
+        "\n",
         "\n",
         "# Normalize requested names up-front\n",
         "REQUESTED_MODELS = [_normalize_model_name(m) for m in REQUESTED_MODELS]\n",
         "\n",
         "available = []\n",
         "for m in REQUESTED_MODELS:\n",
-        "    print(f\"⏳ Pulling {m}…\", end=\"\")\n",
-        "    p = subprocess.Popen([\"ollama\", \"pull\", m],\n",
-        "                         stdout=subprocess.PIPE, stderr=subprocess.STDOUT, text=True)\n",
-        "    start = time.time()\n",
-        "    buf = []\n",
-        "    while True:\n",
-        "        line = p.stdout.readline()\n",
-        "        if not line:\n",
-        "            if p.poll() is not None: break\n",
-        "            time.sleep(0.2)\n",
-        "            continue\n",
-        "        buf.append(line.strip())\n",
-        "        if time.time() - start > 900:  # 15 min timeout\n",
-        "            p.kill()\n",
-        "            print(f\" ❌ Timeout after 15 min\")\n",
-        "            break\n",
+        "    rc, tail = _pull_with_logs(m)\n",
+        "    if rc != 0:\n",
+        "        print(f\"⚠️ {m} failed or timed out. Showing last few log lines:\")\n",
+        "        print(\"\\n\".join(tail[-20:]))\n",
+        "        continue\n",
+        "\n",
         "    # verify availability\n",
         "    try:\n",
         "        models = requests.get(f\"{BASE}/api/tags\", timeout=10).json().get(\"models\", [])\n",
         "        roots = {t.get(\"name\", \"\").split(\":\")[0] for t in models}\n",
         "        if any(m.startswith(r) or r.startswith(m) for r in roots):\n",
-        "            print(\" ✅ done.\")\n",
+        "            print(f\"✅ Model {m} available and verified.\")\n",
         "            available.append(m)\n",
         "        else:\n",
-        "            print(\" ⚠️ not found after pull.\")\n",
+        "            print(f\"⚠️ {m} not listed after pull.\")\n",
         "    except Exception as e:\n",
-        "        print(f\" ⚠️ error verifying: {e}\")\n",
+        "        print(f\"⚠️ Verification error for {m}: {e}\")\n",
         "\n",
         "if not available:\n",
         "    raise SystemExit(\"❌ No models ready. Try smaller ones like 'mistral' or 'gemma2:2b-instruct'.\")\n",
         "\n",
         "PRIMARY_MODEL = available[0]\n",
         "print(\"\\n✅ Using models:\", \", \".join(available), f\"(primary: {PRIMARY_MODEL})\")\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -803,7 +818,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2GPkTylQUJt",
-        "outputId": "d872a579-5f24-4e8b-90fd-c9f779a3727c"
+        "outputId": "b5705da0-8a2b-476a-9f0f-4e48fb74c8ba"
       },
       "execution_count": null,
       "outputs": [
